# CPU_Emulator

Burmagin_CPU/: CMakeLists.txt  main.cpp
Burmagin_CPU/programs/: add  fac  fib
Burmagin_CPU/project/: CMakeLists.txt
Burmagin_CPU/project/include/: CPU.hpp  CodeFile.hpp  Commands.hpp  Parser.hpp  Runner.h  Stack.hpp
Burmagin_CPU/project/src/: CPU.cpp  CodeFile.cpp  Commands.cpp  Parser.cpp
Burmagin_CPU/project/test/: test.cpp
